...

    init() {
        super.init(frame: .zero)
        backgroundColor = .white
        
        searchButton.backgroundColor = .blue
        searchButton.setTitle("Search", for: .normal)
        searchButton.setTitleColor(.white, for: .normal)
        
        inputField.layer.borderWidth = 2.0
        inputField.layer.borderColor = UIColor.black.cgColor
        
        tableView.translatesAutoresizingMaskIntoConstraints = false
...
