...

struct HUSearchButton_Previews: PreviewProvider {
    static var previews: some View {
        VStack {
            HUSearchButton(
                searchText: .constant("Pesquisar por hotel ou destino"),
                placeholderText: "Buscar",
                style: .plain,
                action: {}
            )
            HUSearchButton(
                searchText: .constant("Pesquisar por hotel ou destino"),
                placeholderText: "Buscar",
...
